fix overlapping toolbar

--- a/public/css/components/ckeditor.css
+++ b/public/css/components/ckeditor.css
@@ -12,7 +12,7 @@
 
 .document-editor__toolbar {
   /* Make sure the toolbar container is always above the editable. */
-  z-index: 1;
+  z-index: 0;
 
   /* Create the illusion of the toolbar floating over the editable. */
   box-shadow: 0 0 5px hsla( 0,0%,0%,.2 );
